--- a/styles/pricing.css
+++ b/styles/pricing.css
@@ -60,6 +60,7 @@ body {
     display: flex;
     align-items: center;
     gap: 16px;
+    color: var(--type);
 }
 
 /* Input */
@@ -382,6 +383,10 @@ footer {
   display: flex;
   flex-direction: column;
   gap: 8px;
+}
+
+.solution.F_n {
+  width: max-content;
 }
 
 .init {
